// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it should render 1`] = `
.c0 {
  border-radius: 3px;
  border: none;
  font-family: 'Open Sans',sans-serif;
  font-size: 0.9em;
  padding: 12px 14px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #eee;
  border-color: #d5d5d5;
  border-style: solid;
  border-width: 0;
  color: #555;
}

.c0:hover {
  background: #d5d5d5;
}

<button
  className="c0"
  color="default"
>
  Test Button
</button>
`;

exports[`<Button /> it should render the primary button 1`] = `
.c0 {
  border-radius: 3px;
  border: none;
  font-family: 'Open Sans',sans-serif;
  font-size: 0.9em;
  padding: 12px 14px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #4375E8;
  border-color: #1b56dd;
  border-style: solid;
  border-width: 0;
  color: #FFF;
}

.c0:hover {
  background: #1b56dd;
}

<button
  className="c0"
  color="primary"
>
  Test Button
</button>
`;

exports[`<Button /> it should render the secondary button 1`] = `
.c0 {
  border-radius: 3px;
  border: none;
  font-family: 'Open Sans',sans-serif;
  font-size: 0.9em;
  padding: 12px 14px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #FF4448;
  border-color: #ff1116;
  border-style: solid;
  border-width: 0;
  color: #FFF;
}

.c0:hover {
  background: #ff1116;
}

<button
  className="c0"
  color="secondary"
>
  Test Button
</button>
`;

exports[`<Button /> it should render the tertiary button 1`] = `
.c0 {
  border-radius: 3px;
  border: none;
  font-family: 'Open Sans',sans-serif;
  font-size: 0.9em;
  padding: 12px 14px;
  cursor: pointer;
  outline: none;
  -webkit-transition: background 150ms;
  transition: background 150ms;
  background: #E8B221;
  border-color: #c29314;
  border-style: solid;
  border-width: 0;
  color: #FFF;
}

.c0:hover {
  background: #c29314;
}

<button
  className="c0"
  color="tertiary"
>
  Test Button
</button>
`;
